[gd_scene load_steps=6 format=2]

[ext_resource path="res://screens/combat/Combat.gd" type="Script" id=1]
[ext_resource path="res://screens/combat/interface/UIRaid1.gd" type="Script" id=2]
[ext_resource path="res://theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://theme/fonts/19700.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
size = 128
font_data = ExtResource( 4 )

[node name="Raid1" type="Node2D"]
position = Vector2( 201.815, 127.816 )
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 441.297
margin_top = -123.817
margin_right = 825.297
margin_bottom = 28.1827
custom_fonts/font = SubResource( 1 )
text = "RAID_1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Combatants" type="HBoxContainer" parent="UI"]
margin_top = 77.0
margin_right = 1280.0
margin_bottom = 328.0
rect_clip_content = true
custom_constants/separation = 360
__meta__ = {
"_edit_use_anchors_": false
}

[node name="firstArr" type="GridContainer" parent="UI/Combatants"]
margin_bottom = 251.0
columns = 3

[node name="tweveArr" type="GridContainer" parent="UI/Combatants"]
margin_left = 360.0
margin_right = 360.0
margin_bottom = 251.0
columns = 3

[node name="Buttons" type="PanelContainer" parent="UI"]
margin_left = 80.0
margin_top = 376.0
margin_right = 1200.0
margin_bottom = 698.0
rect_scale = Vector2( 1.06805, 0.834193 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Buttons"]
margin_left = 90.0
margin_top = 35.0
margin_right = 1030.0
margin_bottom = 394.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 4

[node name="AddA1" type="Button" parent="UI/Buttons/GridContainer"]
margin_right = 232.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA1"

[node name="AddA2" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 236.0
margin_right = 468.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA2"

[node name="AddA3" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 472.0
margin_right = 704.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA3"

[node name="AddA4" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 708.0
margin_right = 940.0
margin_bottom = 117.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA4"

[node name="AddA5" type="Button" parent="UI/Buttons/GridContainer"]
margin_top = 121.0
margin_right = 232.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA5"

[node name="AddA6" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 236.0
margin_top = 121.0
margin_right = 468.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA6"

[node name="AddA7" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 472.0
margin_top = 121.0
margin_right = 704.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA7"

[node name="AddA8" type="Button" parent="UI/Buttons/GridContainer"]
margin_left = 708.0
margin_top = 121.0
margin_right = 940.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "AddA8"

[node name="Check" type="Button" parent="UI/Buttons/GridContainer"]
margin_top = 242.0
margin_right = 232.0
margin_bottom = 359.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Check"
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA1" to="UI" method="_on_AddA1_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA2" to="UI" method="_on_AddA2_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA3" to="UI" method="_on_AddA3_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA4" to="UI" method="_on_AddA4_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA5" to="UI" method="_on_AddA5_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA6" to="UI" method="_on_AddA6_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA7" to="UI" method="_on_AddA7_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/AddA8" to="UI" method="_on_AddA8_button_up"]
[connection signal="button_up" from="UI/Buttons/GridContainer/Check" to="UI" method="_on_Check_button_up"]
